// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListProgress Component > renders correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  min-height: 70px;
}

.emotion-1 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-column-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  position: relative;
  overflow: hidden;
  display: block;
  height: 4px;
  z-index: 0;
  background-color: rgb(167, 202, 237);
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-5 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear 0ms;
  transition: transform 0.2s linear 0ms;
  transform-origin: left;
  background-color: #1976d2;
  -webkit-transition: -webkit-transform .4s linear 0ms;
  transition: transform .4s linear 0ms;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  letter-spacing: 0.03333em;
}

<div>
  <div
    class="relative flexbox column emotion-0 "
  >
    <p
      class="MuiTypography-root MuiTypography-body2 flexbox align-items-center emotion-1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-2"
        data-testid="PendingOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
        />
        <circle
          cx="7"
          cy="12"
          r="1.5"
        />
        <circle
          cx="12"
          cy="12"
          r="1.5"
        />
        <circle
          cx="17"
          cy="12"
          r="1.5"
        />
      </svg>
      <span
        class="margin-left-small"
      >
        Queued to start
      </span>
    </p>
    <div
      class="emotion-3"
    >
      <span
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate emotion-4"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-bar1 emotion-5"
          style="transform: translateX(-100%);"
        />
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 flexbox align-items-center emotion-1"
        style="justify-content: flex-end;"
      >
        0 failures
      </p>
    </div>
    <div
      class="flexbox space-between"
    >
      <span
        class="MuiTypography-root MuiTypography-caption emotion-7"
      >
        Devices in progress
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption emotion-7"
      >
        Current phase: 1 of 1
      </span>
    </div>
  </div>
</div>
`;

exports[`ListProgress Component > renders correctly for phases 1`] = `
@keyframes animation-0 {
  0% {
    left: -35%;
    right: 100%;
  }

  60% {
    left: 100%;
    right: -90%;
  }

  100% {
    left: 100%;
    right: -90%;
  }
}

@keyframes animation-1 {
  0% {
    left: -200%;
    right: 100%;
  }

  60% {
    left: 107%;
    right: -8%;
  }

  100% {
    left: 107%;
    right: -8%;
  }
}

.emotion-0 {
  background-color: #fff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  min-height: 70px;
}

.emotion-1 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-column-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  position: relative;
  overflow: hidden;
  display: block;
  height: 4px;
  z-index: 0;
  background-color: rgb(167, 202, 237);
}

@media print {
  .emotion-2 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-3 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear 0ms;
  transition: transform 0.2s linear 0ms;
  transform-origin: left;
  background-color: #1976d2;
  width: auto;
  -webkit-animation: animation-0 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
  animation: animation-0 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
}

.emotion-4 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear 0ms;
  transition: transform 0.2s linear 0ms;
  transform-origin: left;
  --LinearProgressBar2-barColor: #1976d2;
  background-color: var(--LinearProgressBar2-barColor, currentColor);
  width: auto;
  -webkit-animation: animation-1 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) 1.15s infinite;
  animation: animation-1 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) 1.15s infinite;
}

.emotion-5 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-6 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  letter-spacing: 0.03333em;
}

<div>
  <div
    class="relative flexbox column emotion-0 "
  >
    <div
      class="emotion-1"
    >
      <span
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate emotion-2"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-bar1 emotion-3"
        />
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-bar2 emotion-4"
        />
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 flexbox align-items-center emotion-5"
        style="justify-content: flex-end;"
      >
        0 failures
      </p>
    </div>
    <div
      class="flexbox space-between"
    >
      <span
        class="MuiTypography-root MuiTypography-caption emotion-6"
      >
        Devices in progress
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption emotion-6"
      >
        Current phase: 2 of 5
      </span>
    </div>
  </div>
</div>
`;

exports[`SimpleProgress Component > renders correctly 1`] = `
@keyframes animation-0 {
  0% {
    left: -35%;
    right: 100%;
  }

  60% {
    left: 100%;
    right: -90%;
  }

  100% {
    left: 100%;
    right: -90%;
  }
}

@keyframes animation-1 {
  0% {
    left: -200%;
    right: 100%;
  }

  60% {
    left: 107%;
    right: -8%;
  }

  100% {
    left: 107%;
    right: -8%;
  }
}

.emotion-0 {
  position: relative;
  overflow: hidden;
  display: block;
  height: 4px;
  z-index: 0;
  background-color: rgb(167, 202, 237);
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-1 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear 0ms;
  transition: transform 0.2s linear 0ms;
  transform-origin: left;
  background-color: #1976d2;
  width: auto;
  -webkit-animation: animation-0 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
  animation: animation-0 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
}

.emotion-2 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear 0ms;
  transition: transform 0.2s linear 0ms;
  transform-origin: left;
  --LinearProgressBar2-barColor: #1976d2;
  background-color: var(--LinearProgressBar2-barColor, currentColor);
  width: auto;
  -webkit-animation: animation-1 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) 1.15s infinite;
  animation: animation-1 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) 1.15s infinite;
}

<div>
  <span
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate emotion-0"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar1 emotion-1"
    />
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar2 emotion-2"
    />
  </span>
</div>
`;
